# inline-spirv-rs

./: Cargo.toml
inline-spirv/: Cargo.toml
inline-spirv/examples/demo/: main.rs
inline-spirv/examples/demo/assets/: shader.wgsl
inline-spirv/src/: lib.rs
inline-spirv/src/backends/: mod.rs  naga.rs  shaderc.rs
jit-spirv/: Cargo.toml
jit-spirv-impl/: Cargo.toml
