[package]
name = "inline-spirv"
version = "0.2.1"
authors = ["PENGUINLIONG <admin@penguinliong.moe>", "Daniel Parnell <me@danielparnell.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Compile GLSL/HLSL/WGSL and inline SPIR-V right inside your crate."
repository = "https://github.com/PENGUINLIONG/inline-spirv-rs"
readme = "README.md"
documentation = "https://docs.rs/inline-spirv-rs"
homepage = "https://github.com/PENGUINLIONG/inline-spirv-rs"
categories = ["graphics", "spirv"]

[lib]
proc-macro = true

[features]
default = []
build-from-source = ["shaderc/build-from-source"]
wgsl_naga = ["naga/wgsl-in"]
hlsl_shaderc = ["shaderc"]
glsl_shaderc = ["shaderc"]
glsl_naga = ["naga/glsl-in"]
spv_asm = ["spq-spvasm"]

[dependencies]
spq-spvasm = { version = "0.1", optional = true}
shaderc = { version = "0.10.1", optional = true }
naga = { version = "28.0.0", features = ["spv-out"], optional = true }
syn = "2.0"
quote = "1.0"

[dev-dependencies]
spirq = "1.2"
